--- a/levelOne/lessonThree/6/main.css
+++ b/levelOne/lessonThree/6/main.css
@@ -9,21 +9,56 @@ h1 { float: left; font-size: 2em; font-weight: normal; font-style: italic; paddi
 h2 { font-weight: normal; font-size: 2.6em; padding: 0 0 10px; margin: 0 0 15px; }
 h3 { font-size: 1.7em; font-weight: normal; margin: 0 0 20px; }
 	h3 a { color: #222; }
-	
-#content { width: 960px; margin: 40px auto; }
 
-.header-menu{
-	display: flex;
-	flex-direction: row;
+ #content { width: 960px; margin: 40px auto; }
+header{
+	padding: 5px 35px 40px 5px;
 }
-.header-li{
-	margin: 0 0 0 20px; color: #888;
-}
+ .header-menu{
+	 display: flex;
+	 flex: row;
+	 justify-content: flex-end;
+	 padding: 15px 25px 15px 5px;
+ }
+ .header-menu:hover .drop-li1{display: block;}
+ .header-menu:hover .drop-li2{display: block;}
+ .header-menu:hover .drop-li3{display: block;}
+ .header-li{
+	list-style: none;
+ }
+ .a-header{
+	margin: 0 0 0 20px; color: #888; 
+ }
+ .drop-menu1,
+ .drop-menu2,
+ .drop-menu3{
+	position: absolute;
+ }
+ .drop-li1{
+	display: none;
+	position: relative;
+	top: 15px;
+	left: -122px;
+ }
+ .drop-li2{
+	display: none;
+	position: relative;
+	top: 15px;
+	left: -61px;
+ }
+ .drop-li3{
+	display: none;
+	position: relative;
+	top: 15px;
+ }
+ .header-link{
+	color: #555;
+ }
 
-/* .menu { float: right; margin: 10px 10px 0 0; }
+/* #menu { float: right; margin: 10px 10px 0 0; }
 	#menu li { display: inline; list-style: none; }
 	#menu li a { float: left; margin: 0 0 0 20px; color: #888; }
-		#menu li a:hover { color: #555; } */
+		#menu li a:hover { color: #555; }  */
 
 .post { clear: both; padding: 30px 10px; border-top: 1px solid #ddd; border-bottom: 1px solid #ddd; margin: 0 0 40px; }
 	.post .details { float: left; width: 250px; }
